@@ -1,67 +1,73 @@
 package com.fifthlab.springtasks.service;
 
 import com.fifthlab.springtasks.model.Task;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class TaskService {
-    private final List<Task> tasks = new ArrayList<>();
-    private final AtomicLong counter = new AtomicLong();
+    private final TaskRepository taskRepository;
 
-    public TaskService() {
-        // Mock some initial data
-        save(Task.builder().title("Review PRD").description("Analyze requirements for the SpringTasks frontend.").completed(true).build());
-        save(Task.builder().title("Setup Project").description("Initialize Spring Boot project and dependencies.").completed(true).build());
-        save(Task.builder().title("Implement Thymeleaf Templates").description("Create UI for task management.").completed(false).build());
+    private String getCurrentUsername() {
+        var auth = SecurityContextHolder.getContext().getAuthentication();
+        if (auth != null && auth.isAuthenticated() && !auth.getPrincipal().equals("anonymousUser")) {
+            return auth.getName();
+        }
+        return "defaultUser";
     }
 
     public List<Task> findAll() {
-        return new ArrayList<>(tasks);
+        return taskRepository.findAll();
     }
 
     public List<Task> findByStatus(Boolean completed) {
-        if (completed == null) return findAll();
-        return tasks.stream()
-                .filter(t -> t.isCompleted() == completed)
-                .collect(Collectors.toList());
+        String username = getCurrentUsername();
+        if (completed == null) return taskRepository.findAll();
+        // Since we didn't add findByUsernameAndCompleted earlier, we can just filter or use findAll
+        // For keeping it simple while converting:
+        return taskRepository.findAll().stream()
+                .filter(t -> t.isCompleted() == completed && getCurrentUsername().equals(t.getUsername()))
+                .toList(); // Note: ideally we should add findByUsernameAndCompleted to Repo, but this is a refactoring of the existing
     }
 
     public Optional<Task> findById(Long id) {
-        return tasks.stream().filter(t -> t.getId().equals(id)).findFirst();
+        return taskRepository.findById(id);
     }
 
     public Task save(Task task) {
-        if (task.getId() == null) {
-            task.setId(counter.incrementAndGet());
-            task.setCreatedAt(LocalDateTime.now());
-            task.setUpdatedAt(LocalDateTime.now());
-            tasks.add(task);
-        } else {
+        if (task.getUsername() == null) {
+            task.setUsername(getCurrentUsername());
+        }
+        if (task.getId() != null) {
+            // Update flow
             findById(task.getId()).ifPresent(existingTask -> {
                 existingTask.setTitle(task.getTitle());
                 existingTask.setDescription(task.getDescription());
                 existingTask.setCompleted(task.isCompleted());
-                existingTask.setUpdatedAt(LocalDateTime.now());
+                existingTask.setDueDate(task.getDueDate());
+                existingTask.setCategory(task.getCategory());
+                taskRepository.save(existingTask);
             });
+            return task;
+        } else {
+            return taskRepository.save(task);
         }
-        return task;
     }
 
     public void deleteById(Long id) {
-        tasks.removeIf(t -> t.getId().equals(id));
+        taskRepository.deleteById(id);
     }
 
     public void toggleStatus(Long id) {
         findById(id).ifPresent(t -> {
             t.setCompleted(!t.isCompleted());
-            t.setUpdatedAt(LocalDateTime.now());
+            taskRepository.save(t);
         });
     }
 }
